--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "portfolio-jerry-v1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jerryrox.github.io/portfolio-jerry-v1/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
@@ -14,8 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
